--- a/Registration-Service.properties
+++ b/Registration-Service.properties
@@ -1,1 +1,9 @@
+server.port=8004
 
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/registration
+spring.datasource.username=root
+spring.datasource.password=Laxmi@123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+eureka.instance.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
